--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -401,6 +401,16 @@ XXX
 Perl's own C<malloc> no longer gets confused by attempts to allocate
 more than a gigabyte on a 64-bit platform.  [perl #119829]
 
+=item *
+
+C<open $$scalarref...> and similar invocations no longer leak the file
+handle.  [perl #115814]
+
+=item *
+
+The default typemap, by avoiding C<newGVgen>, now no longer leaks when
+XSUBs return file handles (C<PerlIO *> or C<FILE *>).  [perl #115814]
+
 =back
 
 =head1 Known Problems
